<resources>
    <string name="app_name">Skynet Player</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="action_recommend">Recommend</string>
    <string name="action_chart">Billboard Chart</string>
    <string name="appwidget_text">No Widget,Sorry</string>
    <string name="add_widget">Add widget</string>
    <string name="ele1">Vibrant(Modern,American POP)</string>
    <string name="ele2">Calm(Classic,Country,Ballad,Jazz)</string>
    <string name="ele3">Rhythmical(Hiphop,,R&amp;B and Souls,Electronic)</string>
    <string name="ele4">Rough(Rock,Metal)</string>

    <!--  NetworkActivity -->
    <string name="page_title">Newest StackOverflow questions tagged \'android\'</string>
    <string name="updated">Last updated:</string>
    <string name="lost_connection">Lost connection.</string>
    <string name="wifi_connected">Wi-Fi reconnected.</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="xml_error">Error parsing XML.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
