<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.shinsw.seungwon.mute.MainActivity">
    <item
        android:id="@+id/action_recommend"
        android:orderInCategory="100"
        android:title="@string/action_recommend"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_billboard"
        android:orderInCategory="100"
        android:title="@string/action_chart"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_search_category_default"
        app:showAsAction="ifRoom" />


</menu>
