<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.shinsw.seungwon.mute.ModeSettingActivity">

    <ImageView
        android:id="@+id/c_ratingok"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/check"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/ad_view"
        android:layout_marginBottom="10dp" />





    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2319743538150636/7479416507" />

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/controlTabHost"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <RelativeLayout
                    android:id="@+id/controllayout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/board"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/map"
                        android:layout_marginTop="30dp" />
                    <FrameLayout
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_alignLeft="@+id/board"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/board"
                        android:layout_marginTop="30dp">

                        <ImageView
                            android:id="@+id/aim"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:src="@mipmap/aim" />
                    </FrameLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/controllayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView"
                        android:layout_alignTop="@+id/textView"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/vibrantbg"
                        android:layout_alignBottom="@+id/c_vibrantbar"
                        android:scaleType="matrix"
                        />

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView2"
                        android:layout_alignTop="@+id/textView2"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/calmbg"
                        android:layout_alignBottom="@+id/c_calmbar"
                        android:scaleType="matrix"/>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView3"
                        android:layout_alignTop="@+id/textView3"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/beatbg"
                        android:layout_alignBottom="@+id/c_beatbar"
                        android:scaleType="matrix"/>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView4"
                        android:layout_alignTop="@+id/textView4"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/rockbg"
                        android:layout_alignBottom="@+id/c_rockbar"
                        android:scaleType="matrix"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ele1"
                        android:id="@+id/textView"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="60dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ele2"
                        android:id="@+id/textView2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40dp"
                        android:layout_below="@+id/textView" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ele3"
                        android:id="@+id/textView3"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40dp"
                        android:layout_below="@+id/textView2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ele4"
                        android:id="@+id/textView4"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40dp"
                        android:layout_below="@+id/textView3" />

                    <SeekBar
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/c_vibrantbar"
                        android:layout_below="@+id/textView"
                        android:layout_centerHorizontal="true" />

                    <SeekBar
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/c_calmbar"
                        android:layout_below="@+id/textView2"
                        android:layout_centerHorizontal="true" />

                    <SeekBar
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/c_beatbar"
                        android:layout_below="@+id/textView3"
                        android:layout_centerHorizontal="true" />

                    <SeekBar
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/c_rockbar"
                        android:layout_below="@+id/textView4"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
